fix(responsive): fix design issues on iPhone after audit

--- a/client/app/about-us/about-us.scss
+++ b/client/app/about-us/about-us.scss
@@ -195,6 +195,7 @@
   }
   .section-default > div > h2.about-subtitle {
     margin-left: 0;
+    margin-top: 0;
   }
   .about-intro {
     margin-bottom: 35px;
@@ -205,7 +206,7 @@
     & > div {
       position: relative;
       top: inherit;
-      margin-top: -60px;
+      margin-top: 10px;
       div {
         padding: 15px;
         p {
@@ -216,7 +217,10 @@
     }
   }
   #main .team-member-left {
-    margin: 25px auto -25px;
+    margin: 25px auto 35px;
+  }
+  #main .team-member-right {
+    margin-bottom: 25px;
   }
   #main .team-member-left, 
   #main .team-member-right {
@@ -230,11 +234,7 @@
     p {
       width: 100%;
       padding: 15px;
-      top: -70px;
       margin: 0 auto;
-      // margin: -70px auto 40px;
-      z-index: 1;
-      position: relative;
     }
     .read-bio {
       display: block;
@@ -251,6 +251,7 @@
     }
     .biography {
       display: none;
+      font-size: 16px;
     }
   }
 }
