--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -358,6 +358,7 @@ h1, h2, h3 {
   }
   p, ul > li {
     color: $color-secondary-dark;
+    font-weight: 300;
   }
   #main {
     padding-left: 0;
